[tool.poetry]
name = "movies-app"
version = "0.1.0"
description = ""
authors = ["Alen Vlahovljak <alen.vlahovljak@evolt.dev>"]
readme = "README.md"
packages = [{include = "movies_app"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-Bootstrap = "^3.3.7.1"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
requests = "^2.28.1"
Flask-SQLAlchemy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
